--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,22 @@ flask_cors==3.0.10
 pymongo==4.1.1
 requests==2.27.1
 wikipedia==1.4.0
+click==8.0
+gunicorn==20.0.4
+Jinja2==3.0
+joblib==0.14.0
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+numpy==1.22.3
+pandas==1.4.2
+Werkzeug==2.1.1
+dnspython==1.16.0
+idna==2.10
+itsdangerous==2.0
+kiwisolver
+Pillow
+pyparsing
+python-dateutil
+soupsieve
+urllib3
+wincertstore
